--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <section class="sticky">
       <div class="hand-container">
         <div class="hand">
-          <img src="./assets/IMG_6328.JPG" alt="" />
+          <img src="./assets/tone.jpg" alt="" />
         </div>
       </div>
 
